--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "scm.inputFontSize": 13,
   "editor.fontSize": 14,
   "editor.tabSize": 2,
-  "prettier.useTabs": true
+	"prettier.useTabs": true,
+	"materialTheme.accent": "Cyan"
 }
